--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,12 +17,44 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
+          <% if @book.favorited_by?(current_user) %>
+            <td>
+              <%= link_to book_favorites_path(@book),class: "heart",  method: :delete do %>
+                ♥<%= @book.favorites.count %>
+              <% end %>
+            </td>
+            <% else %>
+            <td>
+              <%=link_to book_favorites_path(@book), method: :post do %>
+                ♥<%= @book.favorites.count %>
+              <% end %>
+            </td>
+          <% end %>
+          <td>
+            <%= link_to "#{@book.book_comments.count} コメント", book_path(@book.id) %>
+          </td>
           <% if current_user.id == @book.user_id %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
+      <div class="form-group">
+        <% @book_comments.each do |book_comment| %>
+          <%= book_comment.user.name %>
+          <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
+        <% end %>
+      </div>
+      <div class="form-group">
+        <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+        <div class="form-group">
+          <%= f.text_area :comment, class:"form-control",placeholder: "コメントをここに" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "送信する" %>
+        </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
