--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,7 +10,8 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-  		    <td><%= link_to user_path(@book.user) do %>
+  		    <td>
+  		      <%= link_to user_path(@book.user) do %>
             <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
             <%= @book.user.name %>
             <% end %>
@@ -41,8 +42,11 @@
       </table>
       <div class="form-group">
         <% @book_comments.each do |book_comment| %>
-          <%= book_comment.user.name %>
-          <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
+          <%= link_to user_path(book_comment.user) do %>
+            <%= attachment_image_tag(book_comment.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
+            <%= book_comment.user.name %>
+            <% end %>
+          <%= book_comment.comment %>
         <% end %>
       </div>
       <div class="form-group">
