--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -32,7 +32,7 @@
             </td>
           <% end %>
           <td>
-            <%= link_to "#{@book.book_comments.count} コメント", book_path(@book.id) %>
+            <%= "#{@book.book_comments.count} コメント"%>
           </td>
           <% if current_user.id == @book.user_id %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
@@ -40,22 +40,39 @@
           <% end %>
         </tr>
       </table>
-      <div class="form-group">
-        <% @book_comments.each do |book_comment| %>
+
+        <table class="table">
+        <tbody>
+        <% @book.book_comments.each do |book_comment| %>
+        <tr>
+          <td>
           <%= link_to user_path(book_comment.user) do %>
-            <%= attachment_image_tag(book_comment.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
+            <%= attachment_image_tag(book_comment.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %>
             <%= book_comment.user.name %>
-            <% end %>
+          <% end %>
+          </td>
+          <td>
           <%= book_comment.comment %>
+          </td>
+          <td>
+          <% if book_comment.user == current_user %>
+            <p>
+              <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment),class:"btn btn-sm btn-danger", method: :delete %>
+            </p>
+          <% end %>
+          </td>
+        </tr>
         <% end %>
-      </div>
+        </tbody>
+        </table>
+
       <div class="form-group">
         <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
         <div class="form-group">
-          <%= f.text_area :comment, class:"form-control",placeholder: "コメントをここに" %>
+          <%= f.text_area :comment, class:"form-control" %>
         </div>
         <div class="form-group">
-          <%= f.submit "送信する" %>
+          <%= f.submit "送信" %>
         </div>
         <% end %>
       </div>
