--- a/app/views/relationships/follower.html.erb
+++ b/app/views/relationships/follower.html.erb
@@ -2,6 +2,9 @@
   <div class ="row">
       <h2>Follow Users</h2>
       <table class="table">
+        <% if @user.following_user.count == 0 %>
+            <thead><tr><th>ユーザーはいません</th></tr></thead>
+        <% else %>
         <thead>
           <tr>
             <th>image</th>
@@ -9,14 +12,15 @@
           </tr>
         </thead>
         <tbody>
-          <% @user.following_user.each do |user| %>
-            <tr>
-              <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
-              <td><%= user.name %></td>
-              <td><%= "フォロー数：#{user.follower.count}" %></td>
-              <td><%= "フォロワー数：#{user.followed.count}" %></td>
-              <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
-            </tr>
-          <% end %>
+            <% @user.following_user.each do |user| %>
+              <tr>
+                <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
+                <td><%= user.name %></td>
+                <td><%= "フォロー数：#{user.follower.count}" %></td>
+                <td><%= "フォロワー数：#{user.followed.count}" %></td>
+                <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
+              </tr>
+            <% end %>
         </tbody>
+        <% end %>
       </table>
