--- a/app/views/searchs/search.html.erb
+++ b/app/views/searchs/search.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class ="row">
       <table class="table">
-        <% if @range == "1" %>
+        <% if @range == "User" %>
           <h2>Users search for "<%= @word %>"</h2>
           <thead>
             <tr>
