--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,19 +18,7 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          <% if @book.favorited_by?(current_user) %>
-            <td>
-              <%= link_to book_favorites_path(@book),class: "heart",  method: :delete do %>
-                ♥<%= @book.favorites.count %>
-              <% end %>
-            </td>
-            <% else %>
-            <td>
-              <%=link_to book_favorites_path(@book), method: :post do %>
-                ♥<%= @book.favorites.count %>
-              <% end %>
-            </td>
-          <% end %>
+          <td id="book_<%= @book.id %>"><%= render "favorites/favorite", book: @book %></td>
           <td>
             <%= "#{@book.book_comments.count} コメント"%>
           </td>
@@ -68,7 +56,6 @@
 
       <div class="form-group">
         <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-
         <div class="form-group">
           <%= f.text_area :comment, class:"form-control" %>
         </div>
@@ -77,6 +64,7 @@
         </div>
         <% end %>
       </div>
+      
     </div>
   </div>
 </div>
