--- a/app/views/searchs/search.html.erb
+++ b/app/views/searchs/search.html.erb
@@ -13,7 +13,7 @@
           <tbody>
             <% @users.each do |user| %>
               <tr>
-                <td>image</td>
+                <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
                 <td><%= user.name %></td>
                 <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
               </tr>
@@ -32,7 +32,7 @@
           <tbody>
             <% @books.each do |book| %>
               <tr>
-                <td>image</td>
+                <td><%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
                 <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
                 <td><%= book.body %></td>
               </tr>
