--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <table class="table">
   <tbody>
-  <% @book.book_comments.each do |book_comment| %>
+  <% book.book_comments.each do |book_comment| %>
   <tr>
     <td>
     <%= link_to user_path(book_comment.user) do %>
@@ -14,7 +14,7 @@
     <td>
     <% if book_comment.user == current_user %>
       <p>
-        <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment),class:"btn btn-sm btn-danger", method: :delete %>
+        <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment),class:"btn btn-sm btn-danger", method: :delete, remote: true %>
       </p>
     <% end %>
     </td>
@@ -23,13 +23,3 @@
   </tbody>
 </table>
 
-<div class="form-group">
-  <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-  <div class="form-group">
-    <%= f.text_area :comment, class:"form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.submit "送信" %>
-  </div>
-  <% end %>
-</div>
