--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,8 +19,8 @@
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
           <td id="book_<%= @book.id %>"><%= render "favorites/favorite", book: @book %></td>
-          <td>
-            <%= "#{@book.book_comments.count} コメント"%>
+          <td id = "comment_count">
+            <%= render "book_comments/count", book: @book %>
           </td>
           <% if current_user.id == @book.user_id %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
@@ -28,43 +28,8 @@
           <% end %>
         </tr>
       </table>
-
-        <table class="table">
-        <tbody>
-        <% @book.book_comments.each do |book_comment| %>
-        <tr>
-          <td>
-          <%= link_to user_path(book_comment.user) do %>
-            <%= attachment_image_tag(book_comment.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %>
-            <%= book_comment.user.name %>
-          <% end %>
-          </td>
-          <td>
-          <%= book_comment.comment %>
-          </td>
-          <td>
-          <% if book_comment.user == current_user %>
-            <p>
-              <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment),class:"btn btn-sm btn-danger", method: :delete %>
-            </p>
-          <% end %>
-          </td>
-        </tr>
-        <% end %>
-        </tbody>
-        </table>
-
-      <div class="form-group">
-        <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-        <div class="form-group">
-          <%= f.text_area :comment, class:"form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.submit "送信" %>
-        </div>
-        <% end %>
-      </div>
-      
+      <div id = "comments_area"><%= render "book_comments/comment", book: @book %></div>
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
