--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,11 +25,11 @@
 </header>
 <div class="text-center mt-2">
   <% if user_signed_in? %>
-    <%= form_with url: searchs_search_path, method: :get, local: :true do |f| %>
+    <%= form_with url: search_path, method: :get, local: :true do |f| %>
       <%= f.text_field :word %>
       <%= f.select :range, options_for_select([['User'], ['Book']]) %>
       <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["部分一致","partial_match"], ["前方一致", "forward_match"], ["後方一致", "backward_match"]]) %>
-      <%= f.submit "検索" %>
+      <%= f.submit "検索する" %>
     <% end %>
   <% end %>
 </div>
